# wx_widget_learning

./: .gitignore
wxWidgets-Learning/: CMakeLists.txt  build.sh
wxWidgets-Learning-backup/: README.md
wxWidgets-Learning-backup/docs/: 01-basics.md
wxWidgets-Learning-backup/examples/01-beginner/: basic_controls.cpp  hello_world.cpp
wxWidgets-Learning-backup/examples/02-intermediate/: dialogs.cpp  list_tree.cpp
wxWidgets-Learning/docs/: 02-events.md  03-layouts.md  04-advanced.md  GETTING_STARTED.md
wxWidgets-Learning/examples/01-beginner/: basic_controls  basic_controls.cpp  hello_world  hello_world.cpp  menus  menus.cpp  untitled.txt
wxWidgets-Learning/examples/02-intermediate/: dialogs  dialogs.cpp  list_tree  list_tree.cpp
wxWidgets-Learning/examples/03-advanced/: custom_draw.cpp  text_editor.cpp
